# rustfetch

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  flake.nix
.github/workflows/: ci.yml
assets/logos/: almalinux.txt  artix.txt  centos.txt  devuan.txt  elementary.txt  endeavouros.txt  garuda.txt  gentoo.txt  kali.txt  macos.txt  manjaro.txt  mx.txt  nixos.txt  rocky.txt  zorin.txt
examples/: genlogos.rs
scripts/: ansisvg.py  genlogos.py
src/: color.rs  logo.rs  main.rs  render.rs  sys.rs  util.rs
src/detect/: battery.rs  cpu.rs  de.rs  disk.rs  display.rs  gpu.rs  host.rs  kernel.rs  locale.rs  memory.rs  mod.rs  os.rs  packages.rs  shell.rs  swap.rs  terminal.rs  uptime.rs  wm.rs
src/sys/: darwin.rs  linux.rs  mod.rs
