[package]
name = "purefetch"
version = "0.2.0"
edition = "2021"
rust-version = "1.70"
authors = ["ooonea"]
description = "A fast, fastfetch-style system information tool written entirely in Rust with zero dependencies"
repository = "https://github.com/ooonea/purefetch"
homepage = "https://github.com/ooonea/purefetch"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["fetch", "fastfetch", "neofetch", "system-info", "cli"]
categories = ["command-line-utilities"]
# Keep the published .crate lean: repo-only artwork, CI and Nix files add
# nothing to a cargo build (assets/logos stays in: it is genlogos' source).
exclude = ["/assets/cover.png", "/.github", "/flake.nix", "/flake.lock"]

[[bin]]
name = "purefetch"
path = "src/main.rs"

# No [dependencies]: the whole tool is std + raw Linux syscalls (see src/sys.rs).

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
